--- a/products.html
+++ b/products.html
@@ -150,7 +150,7 @@
     <footer class="footer">
       <section class="footer__info container">
         <div class="footer__navigation">
-          <h4 class="footer__title">Navigation</h4>
+          <h3 class="footer__title">Navigation</h3>
           <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">About Us</a>
@@ -180,12 +180,12 @@
         </div>
         <!-- /navigation -->
         <div class="footer__customer">
-          <h4 class="footer__title">Customer Information</h4>
+          <h3 class="footer__title">Customer Information</h3>
           <ul class="footer__list undoted">
             <li class="footer__item">
-              <a href="contact_us.html" target="_blank" class="footer__link"
-                >Contact Us</a
-              >
+              <a href="contact_us.html" target="_blank" class="footer__link">
+                Contact Us
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">
@@ -214,7 +214,7 @@
         </div>
         <!-- /customer-footer -->
         <div class="footer__connect">
-          <h4 class="footer__title">Connect</h4>
+          <h3 class="footer__title">Connect</h3>
           <form action="#" class="footer__form">
             <fieldset class="footer__fieldset">
               <div class="label-wrapper">
@@ -235,6 +235,7 @@
                 href="https://www.facebook.com"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-facebook"
               >
                 <svg
                   width="30"
@@ -259,7 +260,12 @@
               </a>
             </li>
             <li class="icons__item">
-              <a href="https://twitter.com/" target="_blank" class="icons-link">
+              <a
+                href="https://twitter.com/"
+                target="_blank"
+                class="icons-link"
+                aria-label="link-twitter"
+              >
                 <svg
                   width="30"
                   height="30"
@@ -287,6 +293,7 @@
                 href="https://www.pinterest.ru/"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-pinterest"
               >
                 <svg
                   width="30"
@@ -315,6 +322,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-instagram"
               >
                 <svg
                   width="30"
@@ -392,5 +400,6 @@
       </div>
       <!-- /footer__other-->
     </footer>
+    <!-- footer -->
   </body>
 </html>
