--- a/toy.html
+++ b/toy.html
@@ -174,7 +174,7 @@
                       name="amount"
                     />
                     <label for="radio-twenty" class="radio-label"></label>
-                    <span class="radio-text">10-20</span>
+                    <span class="radio-text radio-text-twenty">10-20</span>
                   </li>
                   <li tabindex="0">
                     <input
@@ -184,7 +184,7 @@
                       name="amount"
                     />
                     <label for="radio-fifty" class="radio-label"></label>
-                    <span class="radio-text">20-50</span>
+                    <span class="radio-text radio-text-fifty">20-50</span>
                   </li>
                 </ul>
               </fieldset>
@@ -292,7 +292,7 @@
     <footer class="footer">
       <section class="footer__info container">
         <div class="footer__navigation">
-          <h4 class="footer__title">Navigation</h4>
+          <h3 class="footer__title">Navigation</h3>
           <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">About Us</a>
@@ -322,12 +322,12 @@
         </div>
         <!-- /navigation -->
         <div class="footer__customer">
-          <h4 class="footer__title">Customer Information</h4>
+          <h3 class="footer__title">Customer Information</h3>
           <ul class="footer__list undoted">
             <li class="footer__item">
-              <a href="contact_us.html" target="_blank" class="footer__link"
-                >Contact Us</a
-              >
+              <a href="contact_us.html" target="_blank" class="footer__link">
+                Contact Us
+              </a>
             </li>
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">
@@ -356,7 +356,7 @@
         </div>
         <!-- /customer-footer -->
         <div class="footer__connect">
-          <h4 class="footer__title">Connect</h4>
+          <h3 class="footer__title">Connect</h3>
           <form action="#" class="footer__form">
             <fieldset class="footer__fieldset">
               <div class="label-wrapper">
@@ -377,6 +377,7 @@
                 href="https://www.facebook.com"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-facebook"
               >
                 <svg
                   width="30"
@@ -401,7 +402,12 @@
               </a>
             </li>
             <li class="icons__item">
-              <a href="https://twitter.com/" target="_blank" class="icons-link">
+              <a
+                href="https://twitter.com/"
+                target="_blank"
+                class="icons-link"
+                aria-label="link-twitter"
+              >
                 <svg
                   width="30"
                   height="30"
@@ -429,6 +435,7 @@
                 href="https://www.pinterest.ru/"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-pinterest"
               >
                 <svg
                   width="30"
@@ -457,6 +464,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-instagram"
               >
                 <svg
                   width="30"
@@ -534,5 +542,6 @@
       </div>
       <!-- /footer__other-->
     </footer>
+    <!-- footer -->
   </body>
 </html>
