--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <footer class="footer">
       <section class="footer__info container">
         <div class="footer__navigation">
-          <h4 class="footer__title">Navigation</h4>
+          <h3 class="footer__title">Navigation</h3>
           <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="#" target="_blank" class="footer__link">About Us</a>
@@ -325,7 +325,7 @@
         </div>
         <!-- /navigation -->
         <div class="footer__customer">
-          <h4 class="footer__title">Customer Information</h4>
+          <h3 class="footer__title">Customer Information</h3>
           <ul class="footer__list undoted">
             <li class="footer__item">
               <a href="contact_us.html" target="_blank" class="footer__link">
@@ -359,7 +359,7 @@
         </div>
         <!-- /customer-footer -->
         <div class="footer__connect">
-          <h4 class="footer__title">Connect</h4>
+          <h3 class="footer__title">Connect</h3>
           <form action="#" class="footer__form">
             <fieldset class="footer__fieldset">
               <div class="label-wrapper">
@@ -380,6 +380,7 @@
                 href="https://www.facebook.com"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-facebook"
               >
                 <svg
                   width="30"
@@ -404,7 +405,12 @@
               </a>
             </li>
             <li class="icons__item">
-              <a href="https://twitter.com/" target="_blank" class="icons-link">
+              <a
+                href="https://twitter.com/"
+                target="_blank"
+                class="icons-link"
+                aria-label="link-twitter"
+              >
                 <svg
                   width="30"
                   height="30"
@@ -432,6 +438,7 @@
                 href="https://www.pinterest.ru/"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-pinterest"
               >
                 <svg
                   width="30"
@@ -460,6 +467,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 class="icons-link"
+                aria-label="link-instagram"
               >
                 <svg
                   width="30"
@@ -537,7 +545,7 @@
       </div>
       <!-- /footer__other-->
     </footer>
-    <!-- MAIN -->
+    <!-- footer -->
 
     <section class="popup contact">
       <h2 class="popup__title contact__title">PopUp</h2>
