fix toy, index. hmml

--- a/index.html
+++ b/index.html
@@ -147,28 +147,34 @@
           </li>
         </ul>
         <div class="products__arrows">
-          <div class="products__arrows-left" tabindex="0">
+          <!-- <div class="products__arrows-left" tabindex="0"> -->
+          <button class="products__arrows-left">
             <svg
-              width="37"
+              width="35"
               height="37"
-              viewBox="-10 0 35 30"
+              viewBox="-4 0 35 30"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
               <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-width="4" />
             </svg>
-          </div>
-          <div class="products__arrows-right" tabindex="0">
+          </button>
+
+          <!-- </div> -->
+          <!-- <div class="products__arrows-right" tabindex="0"> -->
+          <button class="products__arrows-right">
             <svg
-              width="37"
+              width="35"
               height="37"
-              viewBox="-10 0 35 30"
+              viewBox="-5 0 35 30"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
               <path d="M2 2L15 15L2 28" stroke="#1E0606" stroke-width="4" />
             </svg>
-          </div>
+          </button>
+
+          <!-- </div> -->
           <p class="products__text">
             Modern finds for the modern home. Curated goods by unique designers
             around the world from fashion to furniture for kids and adults.
