--- a/toy.html
+++ b/toy.html
@@ -79,7 +79,7 @@
                 </div>
               </fieldset>
               <fieldset>
-                <legend tabindex="0">Color</legend>
+                <legend>Color</legend>
                 <ul class="undoted checkbox-list">
                   <li>
                     <input
@@ -125,7 +125,7 @@
                 </ul>
               </fieldset>
               <fieldset>
-                <legend tabindex="0">Delivery</legend>
+                <legend>Delivery</legend>
                 <ul class="undoted radio-list">
                   <li>
                     <input
@@ -153,7 +153,7 @@
                 </ul>
               </fieldset>
               <fieldset class="radio-limit">
-                <legend tabindex="0">Amount</legend>
+                <legend>Amount</legend>
                 <ul class="undoted radio-list radio-list-limit">
                   <li tabindex="0">
                     <input
@@ -174,7 +174,7 @@
                       name="amount"
                     />
                     <label for="radio-twenty" class="radio-label"></label>
-                    <span class="radio-text radio-text-twenty">10-20</span>
+                    <span class="radio-text radio-text_twenty">10-20</span>
                   </li>
                   <li tabindex="0">
                     <input
@@ -184,7 +184,7 @@
                       name="amount"
                     />
                     <label for="radio-fifty" class="radio-label"></label>
-                    <span class="radio-text radio-text-fifty">20-50</span>
+                    <span class="radio-text radio-text_fifty">20-50</span>
                   </li>
                 </ul>
               </fieldset>
@@ -249,42 +249,49 @@
       </section>
       <!-- /products -->
       <div class="page container">
-        <svg
-          tabindex="0"
-          width="18"
-          height="30"
-          viewBox="0 0 18 30"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M16 2L3 15L16 28"
-            stroke="#1E0606"
-            stroke-opacity="0.12"
-            stroke-width="4"
-          />
-        </svg>
+        <button class="page__arrow-right">
+          <svg
+            width="18"
+            height="30"
+            viewBox="0 0 18 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16 2L3 15L16 28"
+              stroke="#1E0606"
+              stroke-opacity="0.12"
+              stroke-width="4"
+            />
+          </svg>
+        </button>
+
         <div class="page__nums">
-          <span class="page__count page__count-active" tabindex="0">1</span>
+          <!-- <span class="page__count page__count-active" tabindex="0">1</span>
           <span class="page__count" tabindex="0">2</span>
           <span class="page__count" tabindex="0">3</span>
-          <span class="page__count" tabindex="0">4</span>
+          <span class="page__count" tabindex="0">4</span> -->
+          <a href="#" class="page__count page__count-active">1</a>
+          <a href="#" class="page__count">2</a>
+          <a href="#" class="page__count">3</a>
+          <a href="#" class="page__count">4</a>
         </div>
-        <svg
-          tabindex="0"
-          width="18"
-          height="30"
-          viewBox="0 0 18 30"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M2 2L15 15L2 28"
-            stroke="#1E0606"
-            stroke-opacity="0.12"
-            stroke-width="4"
-          />
-        </svg>
+        <button class="page__arrow-right">
+          <svg
+            width="18"
+            height="30"
+            viewBox="0 0 18 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 2L15 15L2 28"
+              stroke="#1E0606"
+              stroke-opacity="0.12"
+              stroke-width="4"
+            />
+          </svg>
+        </button>
       </div>
     </main>
     <!-- /MAIN -->
