--- a/blog.html
+++ b/blog.html
@@ -152,42 +152,49 @@
         </ul>
       </section>
       <div class="page">
-        <svg
-          tabindex="0"
-          width="18"
-          height="30"
-          viewBox="0 0 18 30"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M16 2L3 15L16 28"
-            stroke="#1E0606"
-            stroke-opacity="0.12"
-            stroke-width="4"
-          />
-        </svg>
+        <button class="page__arrow-right">
+          <svg
+            width="18"
+            height="30"
+            viewBox="0 0 18 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16 2L3 15L16 28"
+              stroke="#1E0606"
+              stroke-opacity="0.12"
+              stroke-width="4"
+            />
+          </svg>
+        </button>
+
         <div class="page__nums">
-          <span class="page__count page__count-active" tabindex="0">1</span>
+          <!-- <span class="page__count page__count-active" tabindex="0">1</span>
           <span class="page__count" tabindex="0">2</span>
           <span class="page__count" tabindex="0">3</span>
-          <span class="page__count" tabindex="0">4</span>
+          <span class="page__count" tabindex="0">4</span> -->
+          <a href="#" class="page__count page__count-active">1</a>
+          <a href="#" class="page__count">2</a>
+          <a href="#" class="page__count">3</a>
+          <a href="#" class="page__count">4</a>
         </div>
-        <svg
-          tabindex="0"
-          width="18"
-          height="30"
-          viewBox="0 0 18 30"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M2 2L15 15L2 28"
-            stroke="#1E0606"
-            stroke-opacity="0.12"
-            stroke-width="4"
-          />
-        </svg>
+        <button class="page__arrow-right">
+          <svg
+            width="18"
+            height="30"
+            viewBox="0 0 18 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 2L15 15L2 28"
+              stroke="#1E0606"
+              stroke-opacity="0.12"
+              stroke-width="4"
+            />
+          </svg>
+        </button>
       </div>
     </main>
     <!-- /MAIN -->
