--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="img/search.jpg" alt="search" class="btn-img" />
       </button>
       <a href="contact_us.html" class="header__button" target="_blank">
-        contact us
+        contact&nbsp;&nbsp;us
       </a>
     </header>
     <!-- / header-->
@@ -280,17 +280,17 @@
               there are other days that i am completely shocked that four years
               have flown by. It's simply magical.
             </p>
-            <div class="contacts__map">
-              <iframe
-                aria-label="contacts-map"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d25229.231104883824!2d-122.42533200000001!3d37.774713!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580a196ede719%3A0x2fb5607634331f2f!2zSGF5ZXMgVmFsbGV5LCDQodCw0L0t0KTRgNCw0L3RhtC40YHQutC-LCDQmtCw0LvQuNGE0L7RgNC90LjRjyA5NDEwMiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1630467085685!5m2!1sru!2sru"
-                width="483"
-                height="200"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-              ></iframe>
-            </div>
+          </div>
+          <div class="contacts__map">
+            <iframe
+              aria-label="contacts-map"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d25229.231104883824!2d-122.42533200000001!3d37.774713!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580a196ede719%3A0x2fb5607634331f2f!2zSGF5ZXMgVmFsbGV5LCDQodCw0L0t0KTRgNCw0L3RhtC40YHQutC-LCDQmtCw0LvQuNGE0L7RgNC90LjRjyA5NDEwMiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1630467085685!5m2!1sru!2sru"
+              width="483"
+              height="200"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
           </div>
         </div>
       </section>
