--- a/toy.html
+++ b/toy.html
@@ -40,7 +40,7 @@
         <img src="img/search.jpg" alt="search" class="btn-img" />
       </button>
       <a href="contact_us.html" class="header__button" target="_blank">
-        contact us
+        contact&nbsp;&nbsp;us
       </a>
     </header>
 
