--- a/toy.html
+++ b/toy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DLK Toy For Kids</title>
+    <link rel="stylesheet" href="css/normalize.css" class="css" />
     <link rel="stylesheet" href="css/common.css" class="css" />
     <link rel="stylesheet" href="css/toy.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
