--- a/toy.html
+++ b/toy.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DLK Toy For Kids</title>
     <link rel="stylesheet" href="css/normalize.css" class="css" />
-    <link rel="stylesheet" href="css/common.css" class="css" />
-    <link rel="stylesheet" href="css/toy.css" class="css" />
+    <link rel="stylesheet" href="css/common.min.css" class="css" />
+    <link rel="stylesheet" href="css/toy.min.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -89,9 +89,13 @@
                       class="checkbox-input"
                       checked
                     />
-                    <label for="check-black" class="checkbox-label" tabindex="0"
-                      >Black</label
+                    <label
+                      for="check-black"
+                      class="checkbox-label"
+                      tabindex="0"
                     >
+                      Black
+                    </label>
                   </li>
                   <li>
                     <input
@@ -99,9 +103,9 @@
                       id="check-blue"
                       class="checkbox-input"
                     />
-                    <label for="check-blue" class="checkbox-label" tabindex="0"
-                      >Blue</label
-                    >
+                    <label for="check-blue" class="checkbox-label" tabindex="0">
+                      Blue
+                    </label>
                   </li>
                   <li>
                     <input
@@ -109,9 +113,13 @@
                       id="check-green"
                       class="checkbox-input"
                     />
-                    <label for="check-green" class="checkbox-label" tabindex="0"
-                      >Green</label
+                    <label
+                      for="check-green"
+                      class="checkbox-label"
+                      tabindex="0"
                     >
+                      Green
+                    </label>
                   </li>
                   <li>
                     <input
@@ -119,9 +127,13 @@
                       id="check-white"
                       class="checkbox-input"
                     />
-                    <label for="check-white" class="checkbox-label" tabindex="0"
-                      >White</label
+                    <label
+                      for="check-white"
+                      class="checkbox-label"
+                      tabindex="0"
                     >
+                      White
+                    </label>
                   </li>
                 </ul>
               </fieldset>
