--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      conte
-      <link
-      rel="stylesheet"
-      href="css/normalize.css"
-      class="css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog DLK</title>
+    <link rel="stylesheet" href="css/normalize.css" class="css" />
     <link rel="stylesheet" href="css/common.css" class="css" />
     <link rel="stylesheet" href="css/blog.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -65,8 +60,9 @@
               <a
                 href="blog.html"
                 class="breadcrumb__link breadcrumb__link_active"
-                >Blog</a
               >
+                &nbsp;&nbsp;Blog
+              </a>
             </li>
           </ul>
         </nav>
