--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DLK Products</title>
     <link rel="stylesheet" href="css/normalize.css" class="css" />
-    <link rel="stylesheet" href="css/common.css" class="css" />
-    <link rel="stylesheet" href="css/products.css" class="css" />
+    <link rel="stylesheet" href="css/common.min.css" class="css" />
+    <link rel="stylesheet" href="css/products.min.css" class="css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
