--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <!-- <audio autoplay loop src="audio/Ferry_Corsten-Tomorrow.mp3"></audio> -->
+    <audio autoplay loop src="audio/Ferry_Corsten-Tomorrow.mp3"></audio>
     <header class="header container">
       <div>
         <a href="index.html" class="logo header__logo">
@@ -90,9 +90,9 @@
               EXPLORE NOW
             </a> -->
           </div>
-          <div class="banner__innerpic">
-            <img src="img/monster.png" alt="cute monster" class="banner__img" />
-          </div>
+          <!-- <div class="banner__innerpic"> -->
+          <img src="img/monster.png" alt="cute monster" class="banner__img" />
+          <!-- </div> -->
         </div>
         <a href="#" target="_blank" class="banner__link">
           Free (continental) USA shipping on all orders of $100 USD or more!
